<resources>
    <string name="app_name">To-DO App</string>
    <string name="escribe_tarea">Que tienes que hacer ?</string>

    <string name="email">E-mail</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_cuenta">No tienes una cuenta !!</string>
    <string name="registro">Registro</string>
    <string name="recordar_contrasena">Recordar Contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salir">Salir</string>
    <string name="nombres">Nombres</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="tienes_cuenta">Ya tienes una cuenta !!</string>
    <string name="adicionar_tarea">Adicionar Tareas</string>
    <string name="edit_perfil">Editar Perfil</string>
    <string name="contactenos">Contactenos</string>
</resources>
